# rushfetch

./: Cargo.toml  LICENSE  README.md  config.toml  ЧИТАЙМЕНЯ.md
src/: lib.rs  main.rs
src/ascii/: builtin.rs  mod.rs
src/config/: defaults.rs  mod.rs
src/data/: collectors.rs  mod.rs
src/localization/: categories.rs  mod.rs
src/ui/: colors.rs  mod.rs
src/utils/: mod.rs  shell.rs  unicode.rs
