[package]
name = "rushfetch"
version = "1.1.0"
edition = "2024"

[dependencies]
serde   = { version = "1.0", features = ["derive"] }
toml    = "0.8"
colored = "2.1"
libc    = "0.2"

[profile.release]
lto                 = true
panic               = "abort"
opt-level           = 3
codegen-units       = 1
strip               = true
overflow-checks     = false
debug-assertions    = false
debug               = false
target-cpu          = "native" 